# proof-carrying-monitor

./: .dockerignore  .gitignore  Cargo.toml  README.md  deny.toml  docker-compose.test.yml  docker-compose.yml  justfile
.github/workflows/: ci.yml
crates/pcm-audit-service/: Cargo.toml
crates/pcm-audit-service/src/: lib.rs  main.rs  service.rs  store.rs
crates/pcm-audit-service/tests/: grpc_test.rs
crates/pcm-cert/: Cargo.toml
crates/pcm-cert-checker-ffi/: Cargo.toml
crates/pcm-cert-checker-ffi/src/: lean_checker.rs  lib.rs
crates/pcm-cert-checker-ffi/tests/: lean_integration.rs  property_tests.rs
crates/pcm-cert-checker-ffi/tests/tests/: property_tests.rs
crates/pcm-cert/src/: generator.rs  lib.rs  serialize.rs
crates/pcm-cli/: Cargo.toml
crates/pcm-cli/src/: audit_cmd.rs  diff_cmd.rs  main.rs  verify_cmd.rs
crates/pcm-cli/tests/: cli_test.rs
crates/pcm-common/: Cargo.toml  build.rs
crates/pcm-common/src/: error.rs  hash.rs  lib.rs
crates/pcm-datalog-engine/: Cargo.toml
crates/pcm-datalog-engine/src/: engine.rs  facts.rs  lib.rs
crates/pcm-graph-service/: Cargo.toml
crates/pcm-graph-service/src/: lib.rs  main.rs  service.rs  store.rs
crates/pcm-graph-service/tests/: grpc_test.rs
crates/pcm-monitor-gateway/: Cargo.toml
crates/pcm-monitor-gateway/benches/: evaluate_bench.rs
crates/pcm-monitor-gateway/src/: lib.rs  main.rs  policy_loader.rs  service.rs
crates/pcm-monitor-gateway/tests/: direct_eval_test.rs  grpc_test.rs
crates/pcm-monitor-gateway/tests/tests/: grpc_test.rs
crates/pcm-policy-dsl/: Cargo.toml
crates/pcm-policy-dsl/src/: ast.rs  compiler.rs  lib.rs  parser.rs
crates/pcm-policy-service/: Cargo.toml
crates/pcm-policy-service/src/: lib.rs  main.rs  service.rs  store.rs
crates/pcm-policy-service/tests/: grpc_test.rs
deploy/k8s/: network-policies.yaml
docker/: audit-service.Dockerfile  graph-service.Dockerfile  init-db.sh  init-db.sql  monitor-gateway.Dockerfile  policy-service.Dockerfile  test-runner.Dockerfile
docs/: DESIGN.md  POLICY_DSL_REFERENCE.md  QUICKSTART.md
lean/: lake-manifest.json  lakefile.lean  lean-toolchain
lean/src/: PCM.lean
lean/src/PCM/: Proofs.lean
lean/src/PCM/Cert/: Certificate.lean  Checker.lean  CheckerTest.lean  FFI.lean  Main.lean
lean/src/PCM/Spec/: Basic.lean  BasicTest.lean  Diff.lean  Policy.lean  PolicyTest.lean
policies/: default.pcm  example.pcm  test_empty.pcm  test_graph_constraint.pcm  test_multi_rule.pcm  test_single_deny.pcm  test_temporal.pcm
policies/examples/: graph-constraints.pcm  permissive.pcm  strict.pcm
proto/pcm/v1/: services.proto  types.proto
python/: README.md  pyproject.toml
python/pcm_proto/: __init__.py
python/pcm_proto/v1/: __init__.py
python/scripts/: generate_proto.sh
python/src/pcm_diff_analyzer/: __init__.py  analyzer.py  cert_generator.py  models.py  solver.py
python/tests/: conftest.py  test_analyzer.py  test_models.py  test_solver.py
scripts/: bench-baseline.json  bench-report.sh  smoke-test.ps1  smoke-test.sh
tests/e2e/: Cargo.toml
tests/e2e/src/: lib.rs  test_env.rs
tests/e2e/tests/: e2e.rs
