[workspace]
resolver = "2"
members = [
    "crates/pcm-common",
    "crates/pcm-policy-dsl",
    "crates/pcm-datalog-engine",
    "crates/pcm-cert",
    "crates/pcm-monitor-gateway",
    "crates/pcm-policy-service",
    "crates/pcm-graph-service",
    "crates/pcm-audit-service",
    "crates/pcm-cert-checker-ffi",
    "crates/pcm-cli",
    "tests/e2e",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/user/proof-carrying-monitor"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rocksdb = "0.22"
sqlx-core = { version = "0.8", default-features = false, features = ["_rt-tokio", "chrono", "json"] }
sqlx-postgres = { version = "0.8", default-features = false, features = ["chrono", "json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = { version = "4", features = ["derive"] }
thiserror = "2"
anyhow = "1"
proptest = "1"
