[package]
name = "pcm-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "PCM 命令行工具"

[dependencies]
pcm-common = { path = "../pcm-common" }
pcm-policy-dsl = { path = "../pcm-policy-dsl" }
pcm-cert-checker-ffi = { path = "../pcm-cert-checker-ffi" }
clap = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
