[package]
name = "pcm-datalog-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "PCM Datalog 评估引擎（自底向上不动点）"

[dependencies]
pcm-common = { path = "../pcm-common" }
pcm-policy-dsl = { path = "../pcm-policy-dsl" }
serde = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
