[package]
name = "pcm-graph-service"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pcm-common = { path = "../pcm-common" }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
sled = { workspace = true }
blake3 = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
