[package]
name = "pcm-policy-dsl"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "PCM 策略 DSL 解析器与编译器"

[dependencies]
pcm-common = { path = "../pcm-common" }
serde = { workspace = true }
serde_json = { workspace = true }
blake3 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
